Fixed some warnings and cleaned up some code in doclets package.
git-svn-id: http://lawu.googlecode.com/svn@21 56f80a26-1f45-11de-82b5-194b17410922